syntax = "proto3";

package sensor.bigdecimal;

message BigDecimal {
    // Sign of the digit.
    bool sign = 1;
    // List of integers with the least significant integer first.
    repeated uint32 integer = 2;
    // Exponent of `10` (number = sign [integer_list] * 10^exponent)
    int64 exponent = 3;
}
